--- a/module_1/BaitapJs/baitap/Luyentap2/bai5.html
+++ b/module_1/BaitapJs/baitap/Luyentap2/bai5.html
@@ -17,8 +17,14 @@
         function tinh() {
             let x = document.getElementById("AB").value;
             let y = document.getElementById("BC").value;
-            let Dientich = (x*y)/2;
-            document.getElementById("ketqua").innerHTML = 'Diện tích hình tam giác vuông ' + Dientich + ' cm^2';
+            let Dientich;
+            if ( x >= 0 && y >= 0 ) {
+                 Dientich = (x*y)/2;
+                 document.getElementById("ketqua").innerHTML = 'Diện tích hình tam giác vuông ' + Dientich + ' cm^2';
+            } else {
+                document.getElementById("ketqua").innerHTML = 'Không có giá trị';
+
+            }
         }
     </script>
 
