--- a/module_1/Casestudy/bai2.html
+++ b/module_1/Casestudy/bai2.html
@@ -20,11 +20,11 @@
                 return false;
               }
           }
-          var kytu = prompt("Điền 1 ký tự(a-z,A-Z) :");
-          if (isVowel(kytu)) {
-            alert(`${kytu} là Nguyên âm`);
+          var kyTu = prompt("Điền 1 ký tự(a-z,A-Z) :");
+          if (isVowel(kyTu)) {
+            alert(`${kyTu} là Nguyên âm`);
           } else {
-            alert(`${kytu} là phụ âm`);
+            alert(`${kyTu} là phụ âm`);
           }
           
     </script>
