--- a/module_1/Casestudy/bai3p2.html
+++ b/module_1/Casestudy/bai3p2.html
@@ -8,7 +8,7 @@
 <body>
     <script>
         const h = parseInt(prompt("Nhập giá trị chiều cao của tam giác cân :"));
-        function tamgiaccan(height) {
+        function tamGiacCan(height) {
             
         for (let i = 1; i <= height; i++) {
             let row = '';
@@ -32,7 +32,7 @@
             console.log(row);
         }
             }
-            tamgiaccan(h);
+            tamGiacCan(h);
     </script>
 </body>
 </html>
