--- a/module_1/Casestudy/bai4p3.html
+++ b/module_1/Casestudy/bai4p3.html
@@ -34,40 +34,40 @@
             
             switch (menu) {
                 case 1:
-                    let soluong1 = parseInt(prompt("Nhập số lượng sản phẩm bạn muốn :"));
-                    for (let i = 0; i < soluong1; i++) {
+                    let soLuong1 = parseInt(prompt("Nhập số lượng sản phẩm bạn muốn :"));
+                    for (let i = 0; i < soLuong1; i++) {
                     totalBill += 20000;}
-                    alert(`Tổng tiền của bạn sau khi mua ${soluong1} ly là ${totalBill}VND.`)
+                    alert(`Tổng tiền của bạn sau khi mua ${soLuong1} ly là ${totalBill}VND.`)
                   break;
                 case 2:
-                let soluong2 = parseInt(prompt("Nhập số lượng sản phẩm bạn muốn :"));
-                  for (let i = 0; i < soluong2; i++) {
+                let soLuong2 = parseInt(prompt("Nhập số lượng sản phẩm bạn muốn :"));
+                  for (let i = 0; i < soLuong2; i++) {
                     totalBill += 15000;}
-                    alert(`Tổng tiền của bạn sau khi mua ${soluong2} ly là ${totalBill}VND.`)
+                    alert(`Tổng tiền của bạn sau khi mua ${soLuong2} ly là ${totalBill}VND.`)
                   break;
                 case 3:
-                let soluong3 = parseInt(prompt("Nhập số lượng sản phẩm bạn muốn :"));
-                for (let i = 0; i < soluong3; i++) {
+                let soLuong3 = parseInt(prompt("Nhập số lượng sản phẩm bạn muốn :"));
+                for (let i = 0; i < soLuong3; i++) {
                 totalBill += 25000;}
-                alert(`Tổng tiền của bạn sau khi mua ${soluong3} ly là ${totalBill}VND.`)
+                alert(`Tổng tiền của bạn sau khi mua ${soLuong3} ly là ${totalBill}VND.`)
                   break;
                 case 4:
-                let soluong4 = parseInt(prompt("Nhập số lượng sản phẩm bạn muốn :"));
-                for (let i = 0; i < soluong4; i++) {
+                let soLuong4 = parseInt(prompt("Nhập số lượng sản phẩm bạn muốn :"));
+                for (let i = 0; i < soLuong4; i++) {
                 totalBill += 12000; }
-                alert(`Tổng tiền của bạn sau khi mua ${soluong4} ly là ${totalBill}VND.`)
+                alert(`Tổng tiền của bạn sau khi mua ${soLuong4} ly là ${totalBill}VND.`)
                   break;
                 case 5:
-                let soluong5 = parseInt(prompt("Nhập số lượng sản phẩm bạn muốn :"));
-                for (let i = 0; i < soluong5; i++) {
+                let soLuong5 = parseInt(prompt("Nhập số lượng sản phẩm bạn muốn :"));
+                for (let i = 0; i < soLuong5; i++) {
                 totalBill += 5000; }
-                alert(`Tổng tiền của bạn sau khi mua ${soluong5} ly là ${totalBill}VND.`)
+                alert(`Tổng tiền của bạn sau khi mua ${soLuong5} ly là ${totalBill}VND.`)
                   break;
                 case 6:
-                let soluong6 = parseInt(prompt("Nhập số lượng sản phẩm bạn muốn :"));
-                for (let i = 0; i < soluong6; i++) {
+                let soLuong6 = parseInt(prompt("Nhập số lượng sản phẩm bạn muốn :"));
+                for (let i = 0; i < soLuong6; i++) {
                 totalBill += 30000; }
-                alert(`Tổng tiền của bạn sau khi mua ${soluong6} ly là ${totalBill}VND.`)
+                alert(`Tổng tiền của bạn sau khi mua ${soLuong6} ly là ${totalBill}VND.`)
                   break;
                 case 7:
                   break;
