--- a/module_1/Casestudy/bai1p2.html
+++ b/module_1/Casestudy/bai1p2.html
@@ -8,7 +8,7 @@
 <body>
     <script>
         const h = parseInt(prompt("Nhập giá trị chiều cao của tam giác vuông : "));
-        function tamgiacvuong(height) {
+        function tamGiacVuong(height) {
             for (let i = 1; i <= height; i++) {
                 let row = '';
             
@@ -22,7 +22,7 @@
                 console.log(row);
             }
         }
-        tamgiacvuong(h);
+        tamGiacVuong(h);
        
 
     </script>
